[tool.poetry]
name = "repl_python3_QuintessentialStrikingSandboxes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gtts = "^2.1.1"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
